# delivery-gap-signals

./: .gitignore  ARCHITECTURE.md  ORCHESTRATOR-SPEC.md  README.md  WORKFLOW-ANALYZER-SPEC.md  pyproject.toml
delivery_gap_signals/: __init__.py  models.py  signals.py
delivery_gap_signals/analysis/: __init__.py  workflow.py  workflow_detect.py  workflow_models.py  workflow_recommend.py
delivery_gap_signals/sources/: __init__.py  file.py  git.py  github.py  github_graphql.py  github_rest.py
tests/: test_github_graphql.py  test_models.py  test_signals.py  test_workflow.py
